# blackjack21

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
.github/scripts/: check_classifiers.py
.github/workflows/: docs-build.yml  ruff-action.yml  ruff-check.yml  tests.yml  validate-pypi.yml
blackjack21/: __init__.py  dealer.py  deck.py  exceptions.py  players.py  table.py  utils.py
docs/: blackjack21.rst  conf.py  index.rst  modules.rst  requirements.txt
examples/: advanced_example.md  basic_example.md
src/blackjack21/: __init__.py  deck.py  exceptions.py  players.py  table.py
src/blackjack21/examples/: advanced_example.py  basic_example.py
src/docs/: blackjack21.rst  conf.py  index.rst  modules.rst
tests/: advanced.py  basic.py  conftest.py  example_advanced.py  example_basic.py  requirements.txt  test_game_flow.py  test_v5.py
wiki archive/: 1.0.x.md  1.1.x.md  1.2.x.md
