[metadata]
name = blackjack21
version = 0.0.1
author = Rahul Nanwani
author_email = rahulnanwani@icloud.com
description = A complete package for blackjack, with max 5 players on a table, double down, and split features too.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rahul-nanwani/blackjack21
project_urls =
    Bug Tracker = https://github.com/rahul-nanwani/blackjack21/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src